--- a/CSS/layout.css
+++ b/CSS/layout.css
@@ -3,3 +3,106 @@
     margin: 0;
     padding: 0;
 }
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.color_background {
+    display: flex;
+    place-content: center;
+    background-image: url('../Images/bg-main-mobile.png');
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 30%;
+}
+
+.white_background {
+    width: 100%;
+}
+
+.card_info {
+    margin: 5em 1.5em 3em 1.5em;
+}
+
+.confirmation {
+    margin: 5em 1.5em 3em 1.5em;
+    display: none;
+}
+
+/* =========== Tablet Styles ===========
+   ===================================== */
+
+@media only screen and (min-width: 376px) and (max-width: 1079px) {
+
+    main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .color_background {
+        background-image: url('../Images/bg-main-desktop.png');
+        background-repeat: no-repeat;
+        background-size: cover;
+        display: flex;
+        place-content: center;
+
+    }
+
+    .white_background {
+        display: flex;
+        place-content: center;
+        height: 100vh;
+    }
+}
+
+/* =========== Desktop Styles ===========
+   ====================================== */
+
+@media only screen and (min-width: 1080px) {
+    
+    main {
+        display: grid;
+        grid-template-columns: 1.5fr 3fr;
+        grid-row: 2fr 2fr;
+    }
+
+    .color_background {
+        grid-column: 1;
+        grid-row: 1/-1;
+        
+        background-image: url('../Images/bg-main-desktop.png');
+        background-repeat: no-repeat;
+        background-size: cover;
+
+        height: 100vh;
+    }
+
+    .white_background {
+        grid-column: 2;
+        grid-row: 1/-1;
+        margin: 1;
+
+        height: 100vh;
+        position: relative;
+        z-index: -1;
+    }
+
+    .card_info {
+        position: absolute;
+        top: 10em;
+        right: 10em;
+    }
+
+    .confirmation {
+        margin: 5em 1.5em 3em 1.5em;
+        position: absolute;
+        top: 10em;
+        right: 10em;
+    }
+
+}
+
