Changed Button to Input

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -204,7 +204,7 @@ small {
 }
 
 
-button {
+input[type="button"] {
     background-color: var(--veryDarkViolet);
     border: none;
     border-radius: .5em;
