Validation and Matching
Form validation and keyup functionality working as intended.  Still can't get form to send however.

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -218,6 +218,10 @@ input[type="button"] {
     width: 100%
 }
 
+small {
+    color: var(--inputError);
+}
+
 /* =========== Desktop Styles ===========
    ====================================== */
 
